# LLM-Serving-Platform

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
artifacts/benchmark/: RESULTS.md  latest.json  synthetic_2026-02-22.json
docs/: architecture_diagram.txt
libs/common/common/: __init__.py  logging.py  metrics.py  redis_utils.py  schemas.py
scripts/: benchmark.py  demo_stream.py  load_test.py
services/: __init__.py
services/gateway/: Dockerfile  __init__.py
services/gateway/app/: __init__.py  config.py  main.py  queue_client.py  rate_limiter.py  sse.py
services/worker/: Dockerfile  __init__.py
services/worker/app/: __init__.py  backends.py  config.py  main.py  mock_backend.py  scheduler.py
tests/integration/: test_chaos_worker_restart.py  test_compose_streaming.py
tests/unit/: test_scheduler.py  test_sse.py  test_worker_backends.py
